# wsg50_cpp

./: CMakeLists.txt  README.md
include/: WSG50Controller.h
src/: WSG50Communicator.cpp  WSG50Controller.cpp  test.cpp
